# libpaclib-git

./: CMakeLists.txt  PKGBUILD  README.md  paclib.pc.in  pacman.cpp  pacman.h
